# discord-music-bot-rs

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
docker/: builder.Dockerfile  runner.Dockerfile
src/: config.rs  handler.rs  main.rs  voice_handler.rs
src/my_commands/: base_command.rs  mod.rs  ping.rs
src/my_commands/audio/: deafen.rs  join.rs  leave.rs  mod.rs  mute.rs  play.rs  shuffle.rs  skip.rs  undeafen.rs  unmute.rs
src/my_commands/manager/: mod.rs  play.rs  playlist.rs
src/playlist/: channel.rs  internal.rs  key.rs  mod.rs
src/voice_handlers/: auto_disconnection.rs  mod.rs  playlist_queue.rs  track_error.rs
src/youtube/: auth.rs  download.rs  mod.rs  playlist.rs
