[package]
name = "discord-music-bot-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1.0"
toml = "0.8"
url = "2.5.2"

rand = "0.8.5"

reqwest = { version = "0.11" }

tracing = "0.1.23"
tracing-subscriber = "0.3"
tracing-futures = "0.2.5"

serenity = { version = "0.12", features = [
    "client",
    "standard_framework",
    "voice",
    "gateway",
    "cache",
] }
songbird = { version = "0.4.2", features = ["builtin-queue"] }
symphonia = { version = "0.5.4", features = ["aac", "isomp4", "mp3"] }

tokio = { version = "1.21.2", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "rt",
    "test-util",
] }
rustls = { version = "0.23.11", features = ["ring"] }

google-youtube3 = "5.0.5"
rusty_ytdl = "0.7.4"

indicatif = "0.17.8"
