[package]
name = "discord-music-bot-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
url = "2.5"

rand = "0.9"

reqwest = { version = "0.12" }

tracing = "0.1.41"
tracing-subscriber = "0.3"
tracing-futures = "0.2.5"

serenity = { version = "0.12", features = [
    "client",
    "standard_framework",
    "voice",
    "gateway",
    "cache",
] }
songbird = { version = "0.5" }
symphonia = { version = "0.5.4", features = ["aac", "isomp4", "mp3"] }

tokio = { version = "1.46", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "rt",
    "test-util",
] }
rustls = { version = "0.23", features = ["ring"] }

google-youtube3 = "6.0"
rusty_ytdl = "0.7.4"
rustube = "0.6.0"
youtube_dl = { version = "0.10.0", features = ["tokio"] }

indicatif = "0.17"
